fixed an issue with about fold. Picture overlapping another fold.

--- a/public/srv/css/main.css
+++ b/public/srv/css/main.css
@@ -157,7 +157,7 @@ h5 {
 
 }
 
-
+/*services buttons*/
 .btn-primary {
 font-size: 17px;
 font-family:raleway, "Book Antiqua", Palatino, serif;
@@ -178,6 +178,48 @@ border: 1px solid #d87b27;
   webkit-transition: all 0.6s ease;
        -moz-transition: all 0.6s ease;
             transition: all 0.6s ease;
+}
+
+/*header button*/
+.btn-info {
+ position: relative;  
+ margin-right: 250px;
+ top: 54%; 
+
+ font-size: 16px;
+ font-family:raleway, "Book Antiqua", Palatino, serif;
+ border:1px solid white;
+ background-color: rgba(255, 255, 255, 0);
+ width: 200px;
+ border-radius: 3px;
+ height: 45px;
+
+ display: flex;
+ align-items: center;
+ justify-content: center;
+
+ -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  
+}
+
+.btn-info:hover {
+ font-size: 16px;
+ font-family:raleway, "Book Antiqua", Palatino, serif;
+ border:1px solid white;
+ background-color: rgba(255, 153, 51, 0);
+ width: 200px;
+ border-radius: 3px;
+ height: 45px;
+color: #ff9933;
+
+ }
+
+ .btn-info:focus {
+background-color: rgba(255, 255, 255, 0)!important;
+border:1px solid white!important;  
+color: #ff9933!important;
 }
 
 
@@ -363,42 +405,8 @@ line-height: 40px;
      top: 49%;
 }
 
-.btn-info {
- position: relative;  
- margin-right: 250px;
- top: 54%; 
-
- font-size: 16px;
- font-family:raleway, "Book Antiqua", Palatino, serif;
- border:1px solid white;
- background-color: rgba(255, 255, 255, 0);
- width: 200px;
- border-radius: 3px;
- height: 45px;
-
- display: flex;
- align-items: center;
- justify-content: center;
-    
 
 
-
-}
-
-.btn-info:hover {
- font-size: 16px;
- font-family:raleway, "Book Antiqua", Palatino, serif;
- border:1px solid white;
- background-color: rgba(255, 153, 51, 0);
- width: 200px;
- border-radius: 3px;
- height: 45px;
-color: #ff9933;
--webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-
- }
 
 @media all and (max-width: 1000px) {
  
@@ -463,7 +471,7 @@ height: 35px;
 
   border-left:2px #ff9933 solid;
   border-bottom:2px #ff9933 solid;
-  height: 365px;
+  height: 475px;
   width: 150px;
   border-bottom-left-radius: 50px;
   position: absolute;
@@ -783,7 +791,7 @@ height: 35px;
 
 
 #aboutsection {
-  height: 100vh;
+  height: 1025px;
   border-bottom: 1px solid #ff9933;
   margin-bottom: 100px;
 
@@ -938,7 +946,7 @@ height: 100%;
 
 .servicetitle {
 
-  margin-bottom: 100px;
+  margin-bottom: 75px;
 }
 
 #services h2 { 
@@ -1226,6 +1234,8 @@ textarea:focus {
 
 /* ------------------------------End forms --------------------*/
 
+/* ------------------------------scrolling fixes --------------------*/
+
 #section-3 {
   padding: 100px;
 }
@@ -1250,3 +1260,6 @@ textarea:focus {
     padding: 50px;
   }
 }
+
+
+/* ------------------------------end scrolling fixes --------------------*/
